Cosmetic updates to readme/comments.

--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!DOCTYPE html>
-<html lang="en"><head><title>It works</title></head><body>You did it!</body></html>
+<html lang="en"><head>
+<meta charset="utf-8">
+<title>It works</title></head>
+<body>
+<p>You did it!</p>
+<p>You can look in the response headers from your browser's development tools
+to see what information the server could provide about the CAC.</p>
+</body>
+</html>
