--- a/index.html
+++ b/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<meta charset="utf-8">
-<title>It works</title></head>
+    <meta charset="utf-8">
+    <title>It works</title></head>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+
+/* echo https://github.com/LeoColomb/perfectmotherf,,kingwebsite | sed s/,,/uc/ */
+body {
+    max-width:650px;
+    margin:40px auto;
+    padding:0 10px;
+    font:18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "Helvetica Neue", Arial, "Noto Sans", sans-serif,
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    color:#444;
+}
+
+h1,h2,h3 {
+    line-height:1.2
+}
+
+@media (prefers-color-scheme:dark) {
+    body {
+        color:white;background:#444
+    }
+    a:link {
+        color:#5bf
+    }
+    a:visited {
+        color:#ccf
+    }
+}
+</style>
+
 <body>
-<p>You did it!</p>
+<h2>You did it!</h2>
+
 <p>You can look in the response headers from your browser's development tools
 to see what information the server could provide about the CAC.</p>
+
 </body>
 </html>
