Add detail in the test page about the CAC in use.
Now you don’t have to use DevTools, though you still could if you want.

--- a/index.html
+++ b/index.html
@@ -37,8 +37,18 @@ h1,h2,h3 {
 <body>
 <h2>You did it!</h2>
 
-<p>You can look in the response headers from your browser's development tools
+<p>You can look in the response headers from your browser’s development tools
 to see what information the server could provide about the CAC.</p>
 
+<!--# if expr="$ssl_client_s_dn" -->
+
+<p>Your CAC certificate's subject identifier is: <b><!--# echo var="ssl_client_s_dn" --></b> which
+expires in <b><!--# echo var="ssl_client_v_remain" --></b> days.</p>
+
+<!--# else -->
+
+<p>Something was wrong reading the CAC certificate, or server-side includes were disabled.</p>
+
+<!--# endif -->
 </body>
 </html>
